# foundational-llm-evals

./: .gitattributes  .gitconfig  .gitignore  README.md  pyproject.toml
data/: nytimescrosswordanswers.txt
scripts/: diff_sqlite.sh
src/foundationevals/: storage.py
src/foundationevals/chatbots/: __init__.py  base.py  claude.py  gpt.py  ollama.py
src/foundationevals/data/: files.py  wordlists.py
src/foundationevals/evaluations/: arithmetic.py  evaluation.py  wordgen.py
tests/: cache.sqlite3  conftest.py  test_basic_evaluations.py  test_message_caching.py  test_ollama.py  test_problem_set_operations.py  test_response_structuring.py  test_wordlists.py
