[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true

[tool.ruff]
select = [
	"F",  # pyflakes
	"E", "W",  # pycodestyle
	"C90",  # mccabe
	"I",  # isort
	"N",  # pep8-naming
	"UP",  # pyupgrade
	"B",  # flake8-bugbear
	"INP",  # flake8-no-pep420
]

[tool.poetry]
name = "foundationevals"
version = "0.0.0"
description = "LLM Evaluations for foundational skills"
authors = ["David R. MacIver <david@drmaciver.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DRMacIver/foundationevals"
repository = "https://github.com/DRMacIver/foundationevals"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"
poetry-plugin-export = "^1.7.1"
ollama = "^0.1.7"
anthropic = "^0.21.3"
openai = "^1.14.2"
pydantic = "^2.6.4"
click = "^8.1.7"
tenacity = "^8.2.3"
jsonschema = "^4.21.1"
shrinkray = {git = "https://github.com/DRMacIver/shrinkray.git"}

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
pytest = "^8.1.1"
jupyter = {extras = ["notebook"], version = "^1.0.0"}
hypothesis = "^6.99.13"

[tool.flake8]
max-line-length = 120
